--- a/tasks/configuration-server.yml
+++ b/tasks/configuration-server.yml
@@ -1,100 +1,111 @@
----
 - name: Start rke2-server on master0
   ansible.builtin.copy:
-      src: "/usr/local/lib/systemd/system/rke2-server.service"
-      dest: "/etc/systemd/system/rke2-server.service"
-      mode: '0644'
+    src: "/usr/local/lib/systemd/system/rke2-server.service"
+    dest: "/etc/systemd/system/rke2-server.service"
+    mode: '0644'
+    remote_src: true
   notify:
-      - systemd daemon reload
-      - "restart rke2 server service"
+  - systemd daemon reload
+  - "restart rke2 server service"
   when:
-      - inventory_hostname == groups["master"]|first
+  - inventory_hostname == groups["master"]|first
 
 - name: Copy k8s admission configuration to nodes
   ansible.builtin.copy:
-      src: "{{ item }}"
-      dest: "/etc/kubernetes/adm-control/{{ item }}"
-      mode: '0644'
+    src: "{{ item }}"
+    dest: "/etc/kubernetes/adm-control/{{ item }}"
+    mode: '0644'
   with_items:
-      - admission-control.yaml
-      - eventratelimit.yaml
+  - admission-control.yaml
+  # - eventratelimit.yaml
 
-- name: Copy cilium configuration to masters
+- name: Empty server manifests
+  ansible.builtin.shell: "rm -rf /var/lib/rancher/rke2/server/manifests/*"
+
+- name: Copy cilium values configuration to master
   ansible.builtin.template:
-      src: "cilium.yaml.j2"
-      dest: "/var/lib/rancher/rke2/server/manifests/helmchartconfig-cilium.yaml"
-      mode: '0644'
+    src: "cilium-config.yaml.j2"
+    dest: "/var/lib/rancher/rke2/server/manifests/rke2-cilium-config.yaml"
+    mode: '0644'
 
 - name: Configure rke2-server on master0
   ansible.builtin.template:
-      src: server.yaml.j2
-      dest: /etc/rancher/rke2/config.yaml
-      owner: root
-      group: root
-      mode: "0600"
+    src: server.yaml.j2
+    dest: /etc/rancher/rke2/config.yaml
+    owner: root
+    group: root
+    mode: "0600"
   notify: "restart rke2 server service"
   when:
-      - inventory_hostname == groups["masters"]|first
+  - inventory_hostname == groups["master"]|first
 
 - name: Flush handlers
   ansible.builtin.meta: flush_handlers
 
 - name: Wait for kubeconfig
   ansible.builtin.wait_for:
-      path: "{{ root_kubeconfig }}"
-      delay: 5
+    path: "{{ root_kubeconfig }}"
+    delay: 5
   when:
-      - inventory_hostname == groups["masters"]|first
+  - inventory_hostname == groups["master"]|first
 
 - name: Fetch admin kubeconfig from master0
-  ansible.builtin.fetch:
-      src: "{{ root_kubeconfig }}"
-      dest: "{{ local_kubeconfig }}"
-      flat: true
+  ansible.builtin.slurp:
+    src: "{{ root_kubeconfig }}"
+  register: kubeconfig
   when:
-      - inventory_hostname == groups["masters"]|first
+  - inventory_hostname == groups["master"]|first
+  tags:
+    - test
+
+- name: Write local kubeconfig
+  ansible.builtin.copy:
+    content: "{{ kubeconfig['content'] | b64decode }}"
+    dest: "{{ local_kubeconfig }}"
   delegate_to: localhost
+  become_user: torben
 
 - name: Replace server address in kubeconfig
   ansible.builtin.lineinfile:
-      path: "{{ local_kubeconfig }}"
-      line: "    server: https://{{ server.address }}:6443"
-      regex: "^    server: "
+    path: "{{ local_kubeconfig }}"
+    line: "    server: https://{{ server.address }}:6443"
+    regex: "^    server: "
   when:
-      - inventory_hostname == groups["masters"]|first
+  - inventory_hostname == groups["master"]|first
   delegate_to: localhost
+  become_user: torben
 
 - name: Wait for k8s api
   ansible.builtin.wait_for:
-      host: "https://{{ server.address }}"
-      port: 6443
-      delay: 5
+    host: "https://{{ server.address }}"
+    port: 6443
+    delay: 5
   when:
-      - inventory_hostname == groups["masters"]|first
+  - inventory_hostname == groups["master"]|first
 
 - name: Configure remaining masters
   ansible.builtin.template:
-      src: server.yaml.j2
-      dest: /etc/rancher/rke2/config.yaml
-      owner: root
-      group: root
-      mode: "0600"
+    src: server.yaml.j2
+    dest: /etc/rancher/rke2/config.yaml
+    owner: root
+    group: root
+    mode: "0600"
   notify: "restart rke2 server service"
   when:
-      - not inventory_hostname == groups["master"]|first
+  - not inventory_hostname == groups["master"]|first
 
-- name: Start rke2-server on master0
+- name: Start rke2-server on master > 0
   ansible.builtin.copy:
-      src: "/usr/local/lib/systemd/system/rke2-server.service"
-      dest: "/etc/systemd/system/rke2-server.service"
-      mode: '0644'
+    src: "/usr/local/lib/systemd/system/rke2-server.service"
+    dest: "/etc/systemd/system/rke2-server.service"
+    mode: '0644'
   notify:
-      - systemd daemon reload
-      - "restart rke2 server service"
+  - systemd daemon reload
+  - "restart rke2 server service"
   when:
-      - not inventory_hostname == groups["master"]|first
+  - not inventory_hostname == groups["master"]|first
 
 - name: Start/enable all rke2-server services
   ansible.builtin.systemd:
-      name: rke2-server.service
-      enabled: true
+    name: rke2-server.service
+    enabled: true
