--- a/tasks/installation.yml
+++ b/tasks/installation.yml
@@ -1,9 +1,9 @@
 ---
 - name: Get tarball checksum
-  ansible.builtin.url:
-      url: https://github.com/rancher/rke2/releases/download/{{ rke2.version }}/sha265sum-amd64.txt
+  ansible.builtin.uri:
+      url: https://github.com/rancher/rke2/releases/download/{{ rke2.version }}/sha256sum-amd64.txt
       return_content: true
-  register: tarball_checksum
+  register: checksums
 
 - name: Create tempfile for tarball
   ansible.builtin.tempfile:
@@ -17,20 +17,20 @@
       url: "https://github.com/rancher/rke2/releases/download/{{ rke2.version }}/rke2.linux-amd64.tar.gz"
       dest: "{{ tarball_tempfile.path }}"
       mode: '0644'
+      checksum: "sha256:{{ checksum }}"
+  vars:
+      checksum: "{{ checksums.content | regex_search('[0-9a-f]+ +rke2.linux-amd64.tar.gz') | regex_search('^[0-9a-f]+') }}"
   check_mode: false
 
-- name: Check tarball checksum
-  ansible.builtin.stat:
-      checksum_algorithm: sha265
-      path: "{{ tarball_tempfile.path }}"
-  register: checksum
-  failed_when: checksum != tarball_checksum
-  vars:
-      checksum: "{{ checksum.content | regex_search('[0-9a-f]+ +rke2.linux-amd64.tar.gz') | regex_search('^[0-9a-f]+') }}"
-
 - name: Extract tarball
-  ansible.builtin.unarchive:
-      src: "{{ tarball_tempfile.path }}"
-      dest: /usr/local
-      remote_src: true
+  # ansible.builtin.unarchive:
+  #     src: "{{ tarball_tempfile.path }}"
+  #     dest: /usr/local
+  #     remote_src: true
+  ansible.builtin.shell: tar xzf "{{ tarball_tempfile.path }}" -C /usr/local
   notify: systemd daemon reload
+
+- name: Delete tarball
+  file:
+    state: absent
+    path: "{{ tarball_tempfile.path }}"
