Remove scheme from s3 endpoint

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -50,6 +50,6 @@ cni: cilium
 
 s3_backup:
   enabled: true
-  endpoint: https://sos-de-fra-1.exo.io
+  endpoint: sos-de-fra-1.exo.io
   bucket: rke2-etcd-backup
   region: de-fra-1
