--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,12 +1,10 @@
 ---
-
 dependencies: []
-
 galaxy_info:
-  role_name: 'rke2'
+  role_name: rke2
   namespace: torbencarstens
-  author: 'Torben Carstens'
-  description: 'Install rke2'
+  author: Torben Carstens
+  description: Install rke2
   min_ansible_version: 6.4.0
   platforms:
     - name: Debian
