--- a/tasks/configuration-server.yml
+++ b/tasks/configuration-server.yml
@@ -1,32 +1,33 @@
+---
 - name: Start rke2-server on master0
   ansible.builtin.copy:
-    src: "/usr/local/lib/systemd/system/rke2-server.service"
-    dest: "/etc/systemd/system/rke2-server.service"
-    mode: '0644'
+    src: /usr/local/lib/systemd/system/rke2-server.service
+    dest: /etc/systemd/system/rke2-server.service
+    mode: "0644"
     remote_src: true
   notify:
-  - systemd daemon reload
-  - "restart rke2 server service"
+    - systemd daemon reload
+    - restart rke2 server service
   when:
-  - inventory_hostname == groups["master"]|first
+    - inventory_hostname == groups["master"]|first
 
 - name: Copy k8s admission configuration to nodes
   ansible.builtin.copy:
     src: "{{ item }}"
-    dest: "/etc/kubernetes/adm-control/{{ item }}"
-    mode: '0644'
+    dest: /etc/kubernetes/adm-control/{{ item }}
+    mode: "0644"
   with_items:
-  - admission-control.yaml
-  # - eventratelimit.yaml
+    - admission-control.yaml
+# - eventratelimit.yaml
 
 - name: Empty server manifests
-  ansible.builtin.shell: "rm -rf /var/lib/rancher/rke2/server/manifests/*"
+  ansible.builtin.shell: rm -rf /var/lib/rancher/rke2/server/manifests/*
 
 - name: Copy cilium values configuration to master
   ansible.builtin.template:
-    src: "cilium-config.yaml.j2"
-    dest: "/var/lib/rancher/rke2/server/manifests/rke2-cilium-config.yaml"
-    mode: '0644'
+    src: cilium-config.yaml.j2
+    dest: /var/lib/rancher/rke2/server/manifests/rke2-cilium-config.yaml
+    mode: "0644"
 
 - name: set node-ip
   ansible.builtin.shell:
@@ -40,9 +41,9 @@
     owner: root
     group: root
     mode: "0600"
-  notify: "restart rke2 server service"
+  notify: restart rke2 server service
   when:
-  - inventory_hostname == groups["master"]|first
+    - inventory_hostname == groups["master"]|first
 
 - name: Flush handlers
   ansible.builtin.meta: flush_handlers
@@ -52,23 +53,23 @@
     path: "{{ root_kubeconfig }}"
     delay: 5
   when:
-  - inventory_hostname == groups["master"]|first
+    - inventory_hostname == groups["master"]|first
 
 - name: Fetch admin kubeconfig from master0
   ansible.builtin.slurp:
     src: "{{ root_kubeconfig }}"
   register: kubeconfig
   when:
-  - inventory_hostname == groups["master"]|first
+    - inventory_hostname == groups["master"]|first
 
 - name: Write local kubeconfig
   ansible.builtin.copy:
     content: "{{ kubeconfig['content'] | b64decode }}"
     dest: "{{ local_kubeconfig }}"
   delegate_to: localhost
-  become_user: torben
+  become_user: "{{ local_kubeconfig_become_user }}"
   when:
-  - inventory_hostname == groups["master"]|first
+    - inventory_hostname == groups["master"]|first
 
 - name: Replace server address in kubeconfig
   ansible.builtin.lineinfile:
@@ -76,9 +77,9 @@
     line: "    server: https://{{ server.address }}:6443"
     regex: "^    server: "
   when:
-  - inventory_hostname == groups["master"]|first
+    - inventory_hostname == groups["master"]|first
   delegate_to: localhost
-  become_user: torben
+  become_user: "{{ local_kubeconfig_become_user }}"
 
 - name: Wait for k8s api
   ansible.builtin.wait_for:
@@ -86,7 +87,7 @@
     port: 6443
     delay: 5
   when:
-  - inventory_hostname == groups["master"]|first
+    - inventory_hostname == groups["master"]|first
 
 - name: Configure remaining masters
   ansible.builtin.template:
@@ -95,21 +96,21 @@
     owner: root
     group: root
     mode: "0600"
-  notify: "restart rke2 server service"
+  notify: restart rke2 server service
   when:
-  - not inventory_hostname == groups["master"]|first
+    - not inventory_hostname == groups["master"]|first
 
 - name: Start rke2-server on master > 0
   ansible.builtin.copy:
-    src: "/usr/local/lib/systemd/system/rke2-server.service"
-    dest: "/etc/systemd/system/rke2-server.service"
-    mode: '0644'
+    src: /usr/local/lib/systemd/system/rke2-server.service
+    dest: /etc/systemd/system/rke2-server.service
+    mode: "0644"
     remote_src: true
   notify:
-  - systemd daemon reload
-  - "restart rke2 server service"
+    - systemd daemon reload
+    - restart rke2 server service
   when:
-  - not inventory_hostname == groups["master"]|first
+    - not inventory_hostname == groups["master"]|first
 
 - name: Start/enable all rke2-server services
   ansible.builtin.systemd:
