--- a/tasks/configuration.yml
+++ b/tasks/configuration.yml
@@ -1,23 +1,23 @@
 ---
 - name: Create directories
   ansible.builtin.file:
-      path: "{{ item }}"
-      state: directory
-      owner: root
-      group: root
-      mode: "0700"
+    path: "{{ item }}"
+    state: directory
+    owner: root
+    group: root
+    mode: "0700"
   with_items:
-      - "/etc/rancher/rke2"
-      - "{{ etcd.snapshot.dir }}"
-      - /etc/kubernetes/adm-control
-      - /var/lib/rancher/rke2/server/manifests/
+    - /etc/rancher/rke2
+    - "{{ etcd.snapshot.dir }}"
+    - /etc/kubernetes/adm-control
+    - /var/lib/rancher/rke2/server/manifests/
 
 - name: Use rke2-cis-sysctl for rke2 service
   ansible.builtin.copy:
-      src: "/usr/local/share/rke2/rke2-cis-sysctl.conf"
-      dest: "/etc/sysctl.d/60-rke2-cis.conf"
-      mode: '0644'
-      remote_src: true
+    src: /usr/local/share/rke2/rke2-cis-sysctl.conf
+    dest: /etc/sysctl.d/60-rke2-cis.conf
+    mode: "0644"
+    remote_src: true
   notify: restart sysctl
 
 - name: Flush handlers
@@ -25,26 +25,26 @@
 
 - name: Create etcd group
   ansible.builtin.group:
-      name: etcd
-      state: present
+    name: etcd
+    state: present
 
 - name: Create etcd user
   ansible.builtin.user:
-      name: etcd
-      group: etcd
-      system: true
-      shell: /sbin/nologin
-      create_home: false
+    name: etcd
+    group: etcd
+    system: true
+    shell: /sbin/nologin
+    create_home: false
 
 - name: add aliases to /root/.bashrc
   ansible.builtin.lineinfile:
     path: /root/.bashrc
     line: "{{ item }}"
-    create: yes
+    create: true
   loop:
-  - "# see https://gist.github.com/superseb/3b78f47989e0dbc1295486c186e944bf"
-  - "alias crictl='/var/lib/rancher/rke2/bin/crictl -r unix:///run/k3s/containerd/containerd.sock -c /var/lib/rancher/rke2/agent/etc/containerd/config.toml'"
-  - "alias k='/var/lib/rancher/rke2/bin/kubectl -n $NS'"
-  - "export NS='kube-system'"
+    - "# see https://gist.github.com/superseb/3b78f47989e0dbc1295486c186e944bf"
+    - alias crictl='/var/lib/rancher/rke2/bin/crictl -r unix:///run/k3s/containerd/containerd.sock -c /var/lib/rancher/rke2/agent/etc/containerd/config.toml'
+    - alias k='/var/lib/rancher/rke2/bin/kubectl -n $NS'
+    - export NS='kube-system'
   tags:
-  - cilium
+    - cilium
