--- a/tasks/configuration.yml
+++ b/tasks/configuration.yml
@@ -49,6 +49,6 @@
     - export NS='kube-system'
     - export CRI_CONFIG_FILE='/var/lib/rancher/rke2/agent/etc/crictl.yaml'
     - export etcdcontainer=$(/var/lib/rancher/rke2/bin/crictl ps --label io.kubernetes.container.name=etcd --quiet)
-    - alias etcdctl="/var/lib/rancher/rke2/bin/crictl exec $etcdcontainer sh -c \"ETCDCTL_ENDPOINTS='https://127.0.0.1:2379' ETCDCTL_CACERT='/var/lib/rancher/rke2/server/tls/etcd/server-ca.crt' ETCDCTL_CERT='/var/lib/rancher/rke2/server/tls/etcd/server-client.crt' ETCDCTL_KEY='/var/lib/rancher/rke2/server/tls/etcd/server-client.key' ETCDCTL_API=3 etcdctl\""
+    - alias etcdctl="/var/lib/rancher/rke2/bin/crictl exec $etcdcontainer sh -c \"ETCDCTL_ENDPOINTS='https://127.0.0.1:2379' ETCDCTL_CACERT='/var/lib/rancher/rke2/server/tls/etcd/server-ca.crt' ETCDCTL_CERT='/var/lib/rancher/rke2/server/tls/etcd/server-client.crt' ETCDCTL_KEY='/var/lib/rancher/rke2/server/tls/etcd/server-client.key' ETCDCTL_API=3 etcdctl\""  # noqa yaml[line-length]
   tags:
     - cilium
